# data-science-learning

./: .gitignore  LICENSE  mnist_classifier_learning.ipynb
bo/: bo_loop_canonical.ipynb  pyproject.toml
classification-example/: classification.ipynb
gaussian-processes/: gpytorch_gp_intro.ipynb  pll_svi_gp_example.ipynb  pyproject.toml  svgp_example.ipynb
neural-networks/: activation.ipynb  neuron.ipynb  pytorch_nn_autograd.ipynb  pytorch_nn_build_a_model.ipynb  pytorch_nn_optimizing.ipynb
regression_example/: regression.ipynb
sql/: example-sqlalchemy.ipynb  example-sqlite.ipynb
vae/: pytorch_vae_example.ipynb  pytorch_vae_example2.ipynb
